<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivNoConnection"
        android:layout_width="@dimen/noConnectionIconWidth"
        android:layout_height="@dimen/noConnectionIconHeight"
        android:src="@drawable/ic_outline_no_connection"
        android:contentDescription="@string/no_connection_icon_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/TitleBoldTextStyle"
        android:id="@+id/noConnectionTitle"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/no_connection_content"
        app:layout_constraintTop_toBottomOf="@id/ivNoConnection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/ShowcaseCaptionStyle"
        android:id="@+id/refreshTitle"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/refresh_content"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@id/noConnectionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:layout_width="@dimen/refreshIconWidth"
        android:layout_height="@dimen/refreshIconHeight"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/refreshTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_outline_refresh_accent"
            android:contentDescription="@string/refresh_button_description"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>