<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16">

    <ImageView
        android:id="@+id/btUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_back_white"
        android:contentDescription="@string/navigate_up_button_description"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/SubHeadBoldTextStyle"
        android:id="@+id/movieToolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_toolbar_title_content"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btUp"/>

    <Button
        style="@style/SubHeadTextStyle"
        android:id="@+id/movieGenreSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/movie_toolbar_genres_spinner_content"
        android:textAllCaps="false"
        android:maxLines="1"
        android:visibility="gone"
        android:drawableEnd="@drawable/ic_filled_dropdown_white"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/movieToolbarTitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>